# kuznets-environmental-curve-dashboard

./: .gitignore  README.md  pyproject.toml
src/kuznets_environmental/: app.py  charts_creator.py  data_loader.py
